cmake_minimum_required(VERSION 3.31)
project(data_structures_docker C)

set(CMAKE_C_STANDARD 11)

add_executable(data_structures_docker
        Data-Structures/Binary_Search_Tree/Q1_F_BST.c
        Data-Structures/Binary_Search_Tree/Q2_F_BST.c
        Data-Structures/Binary_Search_Tree/Q3_F_BST.c
        Data-Structures/Binary_Search_Tree/Q4_F_BST.c
        Data-Structures/Binary_Search_Tree/Q5_F_BST.c
        Data-Structures/Binary_Tree/Q1_E_BT.c
        Data-Structures/Binary_Tree/Q2_E_BT.c
        Data-Structures/Binary_Tree/Q3_E_BT.c
        Data-Structures/Binary_Tree/Q4_E_BT.c
        Data-Structures/Binary_Tree/Q5_E_BT.c
        Data-Structures/Binary_Tree/Q6_E_BT.c
        Data-Structures/Binary_Tree/Q7_E_BT.c
        Data-Structures/Binary_Tree/Q8_E_BT.c
        Data-Structures/Linked_List/Q1_A_LL.c
        Data-Structures/Linked_List/Q2_A_LL.c
        Data-Structures/Linked_List/Q3_A_LL.c
        Data-Structures/Linked_List/Q4_A_LL.c
        Data-Structures/Linked_List/Q5_A_LL.c
        Data-Structures/Linked_List/Q6_A_LL.c
        Data-Structures/Linked_List/Q7_A_LL.c
        Data-Structures/Stack_and_Queue/Q1_C_SQ.c
        Data-Structures/Stack_and_Queue/Q2_C_SQ.c
        Data-Structures/Stack_and_Queue/Q3_C_SQ.c
        Data-Structures/Stack_and_Queue/Q4_C_SQ.c
        Data-Structures/Stack_and_Queue/Q5_C_SQ.c
        Data-Structures/Stack_and_Queue/Q6_C_SQ.c
        Data-Structures/Stack_and_Queue/Q7_C_SQ.c)
